--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -12,11 +12,16 @@
 }
 
 .h2 {
-  font-size: 45px;
-  line-height: 60px;
+  font-size: 34px;
+  line-height: 37px;
   font-family: $primary-font-bold;
-  margin: 0 0 40px 0;
+  margin: 0 0 20px 0;
   letter-spacing: -1px;
+  @include media-breakpoint-up(md) {
+    font-size: 45px;
+    line-height: 60px;
+    margin: 0 0 40px 0;
+  }
   span {
     font-family: $primary-font-light;
   }
@@ -55,7 +60,7 @@
 
 .p {
   font-size: 17px;
-  line-height: 26px;
+  line-height: 28px;
   margin: 0 0 20px 0;
   font-family: $primary-font-light;
   @include media-breakpoint-up(md) {
