--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -1,44 +1,17 @@
-.carousel-slider {
-    .div {
-        width: 100%;
-    }
-    .image-block {
-        width: 90%;
-        height: 50vh;
-        padding-right: 15px;
-        padding-left: 15px;
-        @include media-breakpoint-up(md) {
-            width: 76%;
-            height: 80vh;
-        }
-
-        .gatsby-image-wrapper {
-            height: 100%;
-        }
-    }
-    .flickity-page-dots {
-        bottom: -40px;
-        .dot {
-            background: transparent;
-            border: 1px solid black;
-            opacity: 1;
-            width: 11px;
-            height: 11px;
-            &.is-selected {
-                background: black;
-            }
-        }
-    }
-}
-
 .carousel-slider--home {
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     overflow: hidden;
+    @include media-breakpoint-up(md) {
+        height: 100vh;
+    }
     .slide {
         left: -50% !important;
         width: 100%;
-        height: 100vh;
+        height: 90vh;
+        @include media-breakpoint-up(md) {
+            height: 100vh;
+        }
         a {
             &:hover {
                 svg {
@@ -138,9 +111,12 @@
             }
         }
         .flickity-page-dots {
-            bottom: -102px;
+            bottom: -51px;
             left: 0;
             text-align: left;
+            @include media-breakpoint-up(md) {
+                bottom: -102px;
+            }
             .dot {
                 height: 1px;
                 width: 10%;
@@ -159,14 +135,18 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            width: 75px;
-            height: 75px;
+            width: 55px;
+            height: 55px;
             border: 2px solid black;
             border-radius: 50%;
             color: black;
             overflow: hidden;
             background: transparent;
             z-index: 1;
+            @include media-breakpoint-up(md) {
+                width: 75px;
+                height: 75px;
+            }
             .flickity-button-icon {
                 position: absolute;
                 left: 40%;
@@ -176,13 +156,21 @@
                 z-index: 1;
             }
             &.previous {
-                top: calc(100% + 100px);
-                left: calc(100% - 170px);
+                top: calc(100% + 50px);
+                left: calc(100% - 130px);
+                @include media-breakpoint-up(md) {
+                    top: calc(100% + 100px);
+                    left: calc(100% - 170px);
+                }
             }
             &.next {
-                top: calc(100% + 100px);
-                left: calc(100% - 75px);
+                top: calc(100% + 50px);
+                left: calc(100% - 55px);
                 right: 0;
+                @include media-breakpoint-up(md) {
+                    top: calc(100% + 100px);
+                    left: calc(100% - 75px);
+                }
             }
         }
     }
@@ -204,5 +192,38 @@
     circle, line {
         transition: all .3s cubic-bezier(.25,.25,.75,.75);
         fill: transparent;
+    }
+}
+
+.carousel-slider {
+    .div {
+        width: 100%;
+    }
+    .image-block {
+        width: 90%;
+        height: 30vh;
+        padding-right: 15px;
+        padding-left: 15px;
+        @include media-breakpoint-up(md) {
+            width: 76%;
+            height: 80vh;
+        }
+
+        .gatsby-image-wrapper {
+            height: 100%;
+        }
+    }
+    .flickity-page-dots {
+        bottom: -40px;
+        .dot {
+            background: transparent;
+            border: 1px solid black;
+            opacity: 1;
+            width: 11px;
+            height: 11px;
+            &.is-selected {
+                background: black;
+            }
+        }
     }
 }
