--- a/src/styles/components/_logos.scss
+++ b/src/styles/components/_logos.scss
@@ -27,7 +27,10 @@
         }
         img {
             max-width: 100%;
-            max-height: 70px;
+            max-height: 50px;
+            @include media-breakpoint-up(md) {
+                max-height: 70px;
+            }
             filter: grayscale(1);
             opacity: 0.5 !important;
             transition: 300ms ease-in-out all !important;
